Updating the actual files and not just the zip.

--- a/Documents/Thesis/HolderThesis2015.tex
+++ b/Documents/Thesis/HolderThesis2015.tex
@@ -169,7 +169,7 @@ That this work received support from a Virginia Tech ICAT SEED grant.
 
 %This thesis is dedicated to the memories of Robert Brooks Nance, Katherine Gayle Nance, and Durward Alexander Holder. You are deeply loved and sorely missed.  
 
-%\textit{To the memories of Robert Brooks Nance, Katherine Gayle Nance, and Durward Alexander Holder; I sorely miss and deeply love you all.}
+\textit{To the memories of Robert Brooks Nance, Katherine Gayle Nance, and Durward Alexander Holder; I sorely miss and deeply love you all.}
 
 \vfill
 
@@ -228,7 +228,7 @@ Musiplectics draws its inspiration from computational thinking \cite{wing2006com
 
 \begin{figure}[ht!]
 	\centering
-		\caption{The process of decomposing code and music to extrapolate a conclusion.}	\includegraphics[width=0.7\textwidth,natwidth=1650,natheight=1050]{ComputationalThinkingAnalogy.png}
+		\caption{The process of decomposing code and music to extrapolate a conclusion.}	\includegraphics[width=0.8\textwidth,natwidth=1650,natheight=1050]{ComputationalThinkingAnalogy.png}
 		\label{image:analogy}
 \end{figure} 
 
@@ -371,7 +371,7 @@ The complexity model presented above outlines the basic functionality of our app
 \begin{figure}[ht!]
 	\centering
 		\caption{The overall control flow from a user's perspective.}
-		\includegraphics[width=0.47\textwidth]{JoinedCropped.png}
+		\includegraphics[width=0.8\textwidth]{JoinedCropped.png}
 		\label{image:flow}
 \end{figure}
 
@@ -585,14 +585,14 @@ Figure \ref{image:gradecomplexity} displays the complexity score of each piece b
 \begin{figure}
 	\centering
 		\caption{The complexity score of pieces by grade from Royal Conservatory. Everything to the right of a grade including that number represents a piece with that grade.}
-		\includegraphics[width=0.47\textwidth]{GradesVsComplexityScores.png}
+		\includegraphics[width=0.8\textwidth]{GradesVsComplexityScores.png}
 		\label{image:gradecomplexity}
 \end{figure}
 
 \begin{figure}
 	\centering
 		\caption{The average complexity score of pieces by grade from Royal Conservatory along with standard deviations.}
-		\includegraphics[width=0.47\textwidth]{GradesVsAverageComplexityScoresSTD.png}
+		\includegraphics[width=0.8\textwidth]{GradesVsAverageComplexityScoresSTD.png}
 		\label{image:gradeaverage}
 \end{figure}
 
@@ -653,14 +653,14 @@ We make use of a file differencing tool with counts of words, lines, and charact
 \begin{figure}
 	\centering
 		\caption{The difference between matched and OCR generated MusicXML files in words, lines, and characters via sdiff as well as the positive difference in complexity score.}
-		\includegraphics[width=0.47\textwidth]{DifferenceOCR.png}
+		\includegraphics[width=0.8\textwidth]{DifferenceOCR.png}
 		\label{image:difference}
 \end{figure}
 
 \begin{figure}
 	\centering
 		\caption{The percentage difference between matched and OCR generated MusicXML files in words, lines, and characters via sdiff as well as the positive percentage difference in complexity score.}
-		\includegraphics[width=0.47\textwidth]{PercentageOCR.png}
+		\includegraphics[width=0.8\textwidth]{PercentageOCR.png}
 		\label{image:percentage}
 \end{figure}
 
@@ -803,9 +803,9 @@ This paper presented musiplectics, a new computational paradigm, that systematic
 
 %\nocite{*}
 \bibliographystyle{abbrvnat}
+\markright{Ethan G. Holder  \hfill Chapter Bibliography \hfill}
 %\thebibliography{HolderThesis2015}
 \bibliography{HolderThesis2015}
-\markright{Ethan G. Holder  \hfill Chapter Bibliography \hfill}
 
 % Otherwise, uncomment the following:
 % \chapter*{Bibliography}
@@ -815,5 +815,9 @@ This paper presented musiplectics, a new computational paradigm, that systematic
 % In LaTeX, each appendix is a "chapter"
 % \chapter{Program Source}
 
+\appendix
+
+\chapter{External Survey}
+\label{sec:appsurvey}
 
 \end{document}
