Adding in screenshots from the website.
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.tex
+++ b/Documents/Thesis/HolderThesis2015.tex
@@ -707,6 +707,34 @@ Second, we found that many users especially wanted to see what the most complex 
 
 Finally, the website also features the ability to run on music pieces with multiple parts or instruments. The relevant data for each part or instrument is extracted and even graphed against one another through D3 \cite{D3}. This comparison is not necessarily correct, given that each part or instrument is assigned a complexity score based off of parameters for B$\flat$ Clarinet. Yet, it is still a valuable design point to show the general applicability of this approach to works that are not only for instruments besides B$\flat$ Clarinet, but also for entire ensemble or orchestral pieces.
 
+\begin{figure}
+	\centering
+		\caption{The main page for the website with user controls.}
+		\includegraphics[width=0.9\textwidth]{WebsiteLandingInput.png}
+		\label{image:websitemain}
+\end{figure}
+
+\begin{figure}
+	\centering
+		\caption{The table output of complexity data on the website.}
+		\includegraphics[width=0.9\textwidth]{WebsiteTable.png}
+		\label{image:websitetable}
+\end{figure}
+
+\begin{figure}
+	\centering
+		\caption{The graph output of complexity data on the website.}
+		\includegraphics[width=0.9\textwidth]{WebsiteGraph.png}
+		\label{image:websitegraph}
+\end{figure}
+
+\begin{figure}
+	\centering
+		\caption{The detailed output for one part on the website.}
+		\includegraphics[width=0.9\textwidth]{WebsiteDetails.png}
+		\label{image:websitedetails}
+\end{figure}
+
 \chapter{Future Work} 
 \label{sec:future}
 \markright{Ethan G. Holder  \hfill Chapter 8. Future Work \hfill}
