Updating thesis with improved acknowledgements (first pass).
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.tex
+++ b/Documents/Thesis/HolderThesis2015.tex
@@ -101,7 +101,7 @@ in partial fulfillment of the requirements for the degree of
 
 \vfill
 
-Masters of Science \\
+Master of Science \\
 in \\
 Computer Science
 
@@ -146,7 +146,7 @@ Ethan G. Holder
 In the Western classical tradition, musicians play music from notated sheet music, called a score. When playing music from a score, a musician translates its visual symbols into sequences of instrument-specific physical motions. Hence, a music score's overall complexity represents a sum of the cognitive and mechanical acuity required for its performance.
 For a given instrument, different notes, intervals, articulations, dynamics, key signatures, and tempo represent dissimilar levels of difficulty, which vary depending on the performer's proficiency. Individual musicians embrace this tenet, but may disagree about the degrees of difficulty.
 
-This paper introduces \emph{musiplectics}\footnote{musiplectics = music + plectics, Greek for the study of complexity}, a systematic and objective approach to computational assessment of the complexity of a music score for any instrument. Musiplectics defines computing paradigms for automatically and accurately calculating the complexity of playing a music score on a given instrument. The core concept codifies a two-phase process. First, music experts rank the relative difficulty of individual musical components (e.g., notes, intervals, dynamics, etc.) for different playing proficiencies and instruments. Second, a computing engine automatically applies this ranking to music scores and calculates their respective complexity. As a proof of concept of musiplectics, we present an automated, Web-based application called Musical Complexity Scoring (MCS) for music educators and performers. Musiplectics can engender the creation of practical computing tools for objective and expeditious assessment of a music score's suitability for the abilities of intended performers.
+This thesis introduces \emph{musiplectics}\footnote{musiplectics = music + plectics, Greek for the study of complexity}, a systematic and objective approach to computational assessment of the complexity of a music score for any instrument. Musiplectics defines computing paradigms for automatically and accurately calculating the complexity of playing a music score on a given instrument. The core concept codifies a two-phase process. First, music experts rank the relative difficulty of individual musical components (e.g., notes, intervals, dynamics, etc.) for different playing proficiencies and instruments. Second, a computing engine automatically applies this ranking to music scores and calculates their respective complexity. As a proof of concept of musiplectics, we present an automated, Web-based application called Musical Complexity Scoring (MCS) for music educators and performers. Musiplectics can engender the creation of practical computing tools for objective and expeditious assessment of a music score's suitability for the abilities of intended performers.
 
 This thesis is based on research submitted for publication at ONWARD'15.
 
@@ -170,7 +170,7 @@ That this work received support from a Virginia Tech ICAT SEED grant.
 
 %This thesis is dedicated to the memories of Robert Brooks Nance, Katherine Gayle Nance, and Durward Alexander Holder. You are deeply loved and sorely missed.  
 
-\textit{To the memories of Robert Brooks Nance, Katherine Gayle Nance, and Durward Alexander Holder; I sorely miss and deeply love you all.}
+\textit{To the memory of Coppertone Holder, the standard by which all other pets shall be measured.}
 
 \vfill
 
@@ -182,13 +182,25 @@ That this work received support from a Virginia Tech ICAT SEED grant.
 
 \thispagestyle{empty}
 
-This thesis would not have been possible without the generous help of many people. First and foremost, I would like to thank my research advisor, Dr. Eli Tilevich, for taking a chance on me as a student, guiding me through the publication process, and supporting me throughout my studies. I owe a great deal of thanks to Dr. Cliff Shaffer, a dedicated professor and reference, who has encouraged me to get involved in research in only my first semester as an undergraduate. I must also thank the numerous professionals that advocated the research process as both an undergraduate and graduate student, including Mr. Mack McGhee, Mrs. Andrea Bailey, and Mr. Adrian Rodriguez.
+I have not experienced anything in this world quite like the publication of my master's thesis. It has taken only my last two years of graduate school to accomplish, but it has brought me (kicking and screaming at times) further along in those two years than I could have possibly imagined. This process took its toll many times not only on myself, but on all of those close to me. Thus, I'd like to take a moment to graciously acknowledge and thank all of those that had a hand in both shaping my research and keeping my sanity.
 
-I generously thank my fellow researchers, Eeshan Shah and Mohammed Davoodi, without whom much of this research would not have been possible. I must express significant thanks to all of the other various professors and advisors who have worked with me over my years at Virginia Tech. Among all of these, I would be remiss if I did not expressly thank Mrs. Terry Arthur. Your guidance from the very first time I met you, before I even began classes, all the way through until my end as an undergraduate has been outstanding in every way.
+I must first thank my parents, Mark and Laurel Holder, without whom I would not even be here. From a very young age, they instilled a love of learning in me and constantly encouraged me, even when I stumbled along my way. You are always a guiding light and a safe harbor in storms. I could write a thesis on this topic alone, but I'll suffice it to say I owe it all to you, and I can never thank you both enough.
 
-Last but not least, I must thank all of my family and friends who pushed me to achieve as much as I have. I especially thank my mother, Laurel Holder, and father, Mark Holder, for instilling a love of learning in me from a very young age and for constantly encouraging me even when I had stumbled along my way. I owe it all to you, and I can never thank you enough.
+My fianc\'ee, my silly, my partner in crime, my goofball, my Baehr, my BMVHB, my coffee-holic, my chocolate monster, my running buddy, my unsung hero... You have all these names to me, but more than each, you are the love of my life Bryanna Baehr. You inspire me in new ways every day and make all of this worth while. I'm so thankful for all the love you give, especially on my worst days. And don't worry, my vows can't possibly be as long as this thesis.
 
-We would like to express our gratitude to the members of the Interdisciplinary Research Honor Society at Virginia Tech for their feedback during the early stages of this project. This project is supported in part by funding from a Virginia Tech ICAT SEED grant.
+To Logan Patterson, we've been great friends since Kindergarten, when life was so much simpler, all the way up to and beyond our college time. We even managed to live together in a dorm and an apartment for 3 years with two other hooligans. Whether it was bouncing research ideas off of each other and calling out some that weren't up to par or just planning our next hair brained scheme and gaming on xbox, we were together through it all. Although our motives were often simply so we could play more video games later, you've kept me sane and challenged me to perform at my very best, and for that I am always grateful.
+
+To Chris Schmucker, with a name like Schmucker's, it's gotta be good. You've always been there for me when I just needed to vent and escape for a little while. We've also gotten into a fair amount of trouble all around the country from band trips in high school to concerts for other artists. You've even saved my life on at least one occasion. I owe you so much and more. Thank you always and stir the coffee good sir.
+
+One person above all others has been instrumental along my research career. Dr. Eli Tilevich, you've been my advisor and even more to me since my time beginning research as a lowly undergrad when I just wanted a fun project to get some experience. You have guided me through this crazy process and taught me uncountable lessons along the way. I can't say that all of these lessons adhered to conventional wisdom, such as how to determine the true prestige of attending certain conferences based on weather patterns or how to play a great April fools joke on the faculty, but they were nonetheless entertaining and effective. Sometimes lessons could be more eye opening as well. I still remember how much I believed myself to be a fairly decent technical writer until we co-edited my first paper... I could go on and on here, recalling many late nights of research deadlines, but through it all you have made me a better researcher, a better student, and a better person. I will never forget that.
+
+I'd also like to thank the esteemed members of my committee, Dr. Amy Gillick and Dr. R. Ben Knapp. Dr. Gillick worked tirelessly with me and Dr. Tilevich throughout our initial paper submission. Dr. Knapp additionally helped us refine our approach for an ICAT expos\'e. All have been invaluable contributors to this research work.
+
+I also owe a great deal of thanks to Dr. Cliff Shaffer, a dedicated professor and reference, who has encouraged me to get involved in research in only my first semester as an undergraduate. I must also thank the numerous professionals that advocated the research process to me as both an undergraduate and graduate student, including Mr. Mack McGhee, Mrs. Andrea Bailey, Mr. Adrian Rodriguez, and Mr. Steve Choquette. I would like to additionally thank several professional mentors from my internships and campus positions, including Mrs. Susan Arnold-Christian, Mr. Frank Marullo, Mr. Jose Rodriguez, Mr. Raymond Parsons, and Mr. Salil Bapat.
+
+I generously thank the members of my software engineering research group, without whom much of this research would not have been possible. I must express significant thanks to all of the other various professors and advisors who have worked with me over my years at Virginia Tech. Among all of these, I would be remiss if I did not expressly thank Mrs. Terry Arthur. Your guidance from the very first time I met you, before I even began classes, all the way through until my end as an undergraduate has been outstanding in every way. Last but not least, I must thank all of my other family and friends who pushed me to achieve as much as I have.
+
+I would like to express my gratitude to the members of the Interdisciplinary Research Honor Society at Virginia Tech for their feedback during the early stages of this project. This project is supported in part by funding from a Virginia Tech ICAT SEED grant.
 
 \pagebreak
 
@@ -208,7 +220,7 @@ We would like to express our gratitude to the members of the Interdisciplinary R
 \label{sec:intro}
 \markright{Ethan G. Holder  \hfill Chapter 1. Introduction \hfill}
 
-Which piano concerto is more difficult: Rachmaninoff’s Second or Third? A newly appointed band director wonders if this new orchestral score is appropriate for a high school band, given that the clarinet and bassoon sections are quite advanced, while the flute and oboe sections are more novice. Music educators working on pedagogical guidelines for K-12 students are trying to decide whether a given piece belongs in the N or N+1 curricular level. A publisher wonders which audience to target when marketing new works, while the publisher's customers face great uncertainty when determining whether unfamiliar music matches their playing ability. Performers, band directors, educators, and publishers encounter these non-trivial questions throughout their professional careers. 
+Which piano concerto is more difficult: Rachmaninoff's Second or Third? A newly appointed band director wonders if this new orchestral score is appropriate for a high school band, given that the clarinet and bassoon sections are quite advanced, while the flute and oboe sections are more novice. Music educators working on pedagogical guidelines for K-12 students are trying to decide whether a given piece belongs in the N or N+1 curricular level. A publisher wonders which audience to target when marketing new works, while the publisher's customers face great uncertainty when determining whether unfamiliar music matches their playing ability. Performers, band directors, educators, and publishers encounter these non-trivial questions throughout their professional careers. 
 
 
 Unfortunately, determining the relative complexity of music is a non-trivial cognitive task. Additionally, methods in the current state of the art depend solely on individual opinions, a process influenced by personal biases and lacking common criteria. In other words, the only way to answer these questions in a viable way is to carefully analyze music scores by hand, a tedious, error-prone, and time-consuming process. The stakeholders at hand would rather spend their precious time on more creative pursuits.
