Adding genome citations and internal references to thesis.
Related to xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.bib
+++ b/Documents/Thesis/HolderThesis2015.bib
@@ -391,3 +391,40 @@ year = {2015},
   pages={41--46},
   year={2006}
 }
+
+
+@article{genomePub,
+	Annote = {10.1038/35057062},
+	Date = {2001/02/15/print},
+	Date-Added = {2015-04-16 16:10:58 +0000},
+	Date-Modified = {2015-04-16 16:10:58 +0000},
+	Day = {15},
+	Isbn = {0028-0836},
+	Journal = {Nature},
+	L3 = {http://www.nature.com/nature/journal/v409/n6822/suppinfo/409860a0_S1.html},
+	M3 = {10.1038/35057062},
+	Month = {02},
+	Number = {6822},
+	Pages = {860--921},
+	Publisher = {Macmillian Magazines Ltd.},
+	Title = {Initial sequencing and analysis of the human genome},
+	Ty = {JOUR},
+	Url = {http://dx.doi.org/10.1038/35057062},
+	Volume = {409},
+	Year = {2001},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1038/35057062}
+}
+
+@article{genomePri,
+author = {Venter, J. Craig and Adams, Mark D. and Myers, Eugene W. and Li, Peter W. and Mural, Richard J. and Sutton, Granger G. and Smith, Hamilton O. and Yandell, Mark and Evans, Cheryl A. and Holt, Robert A. and Gocayne, Jeannine D. and Amanatides, Peter and Ballew, Richard M. and Huson, Daniel H. and Wortman, Jennifer Russo and Zhang, Qing and Kodira, Chinnappa D. and Zheng, Xiangqun H. and Chen, Lin and Skupski, Marian and Subramanian, Gangadharan and Thomas, Paul D. and Zhang, Jinghui and Gabor Miklos, George L. and Nelson, Catherine and Broder, Samuel and Clark, Andrew G. and Nadeau, Joe and McKusick, Victor A. and Zinder, Norton and Levine, Arnold J. and Roberts, Richard J. and Simon, Mel and Slayman, Carolyn and Hunkapiller, Michael and Bolanos, Randall and Delcher, Arthur and Dew, Ian and Fasulo, Daniel and Flanigan, Michael and Florea, Liliana and Halpern, Aaron and Hannenhalli, Sridhar and Kravitz, Saul and Levy, Samuel and Mobarry, Clark and Reinert, Knut and Remington, Karin and Abu-Threideh, Jane and Beasley, Ellen and Biddick, Kendra and Bonazzi, Vivien and Brandon, Rhonda and Cargill, Michele and Chandramouliswaran, Ishwar and Charlab, Rosane and Chaturvedi, Kabir and Deng, Zuoming and Francesco, Valentina Di and Dunn, Patrick and Eilbeck, Karen and Evangelista, Carlos and Gabrielian, Andrei E. and Gan, Weiniu and Ge, Wangmao and Gong, Fangcheng and Gu, Zhiping and Guan, Ping and Heiman, Thomas J. and Higgins, Maureen E. and Ji, Rui-Ru and Ke, Zhaoxi and Ketchum, Karen A. and Lai, Zhongwu and Lei, Yiding and Li, Zhenya and Li, Jiayin and Liang, Yong and Lin, Xiaoying and Lu, Fu and Merkulov, Gennady V. and Milshina, Natalia and Moore, Helen M. and Naik, Ashwinikumar K and Narayan, Vaibhav A. and Neelam, Beena and Nusskern, Deborah and Rusch, Douglas B. and Salzberg, Steven and Shao, Wei and Shue, Bixiong and Sun, Jingtao and Wang, Zhen Yuan and Wang, Aihui and Wang, Xin and Wang, Jian and Wei, Ming-Hui and Wides, Ron and Xiao, Chunlin and Yan, Chunhua and Yao, Alison and Ye, Jane and Zhan, Ming and Zhang, Weiqing and Zhang, Hongyu and Zhao, Qi and Zheng, Liansheng and Zhong, Fei and Zhong, Wenyan and Zhu, Shiaoping C. and Zhao, Shaying and Gilbert, Dennis and Baumhueter, Suzanna and Spier, Gene and Carter, Christine and Cravchik, Anibal and Woodage, Trevor and Ali, Feroze and An, Huijin and Awe, Aderonke and Baldwin, Danita and Baden, Holly and Barnstead, Mary and Barrow, Ian and Beeson, Karen and Busam, Dana and Carver, Amy and Center, Angela and Cheng, Ming Lai and Curry, Liz and Danaher, Steve and Davenport, Lionel and Desilets, Raymond and Dietz, Susanne and Dodson, Kristina and Doup, Lisa and Ferriera, Steven and Garg, Neha and Gluecksmann, Andres and Hart, Brit and Haynes, Jason and Haynes, Charles and Heiner, Cheryl and Hladun, Suzanne and Hostin, Damon and Houck, Jarrett and Howland, Timothy and Ibegwam, Chinyere and Johnson, Jeffery and Kalush, Francis and Kline, Lesley and Koduru, Shashi and Love, Amy and Mann, Felecia and May, David and McCawley, Steven and McIntosh, Tina and McMullen, Ivy and Moy, Mee and Moy, Linda and Murphy, Brian and Nelson, Keith and Pfannkoch, Cynthia and Pratts, Eric and Puri, Vinita and Qureshi, Hina and Reardon, Matthew and Rodriguez, Robert and Rogers, Yu-Hui and Romblad, Deanna and Ruhfel, Bob and Scott, Richard and Sitter, Cynthia and Smallwood, Michelle and Stewart, Erin and Strong, Renee and Suh, Ellen and Thomas, Reginald and Tint, Ni Ni and Tse, Sukyee and Vech, Claire and Wang, Gary and Wetter, Jeremy and Williams, Sherita and Williams, Monica and Windsor, Sandra and Winn-Deen, Emily and Wolfe, Keriellen and Zaveri, Jayshree and Zaveri, Karena and Abril, Josep F. and Guigó, Roderic and Campbell, Michael J. and Sjolander, Kimmen V. and Karlak, Brian and Kejariwal, Anish and Mi, Huaiyu and Lazareva, Betty and Hatton, Thomas and Narechania, Apurva and Diemer, Karen and Muruganujan, Anushya and Guo, Nan and Sato, Shinji and Bafna, Vineet and Istrail, Sorin and Lippert, Ross and Schwartz, Russell and Walenz, Brian and Yooseph, Shibu and Allen, David and Basu, Anand and Baxendale, James and Blick, Louis and Caminha, Marcelo and Carnes-Stine, John and Caulk, Parris and Chiang, Yen-Hui and Coyne, My and Dahlke, Carl and Mays, Anne Deslattes and Dombroski, Maria and Donnelly, Michael and Ely, Dale and Esparham, Shiva and Fosler, Carl and Gire, Harold and Glanowski, Stephen and Glasser, Kenneth and Glodek, Anna and Gorokhov, Mark and Graham, Ken and Gropman, Barry and Harris, Michael and Heil, Jeremy and Henderson, Scott and Hoover, Jeffrey and Jennings, Donald and Jordan, Catherine and Jordan, James and Kasha, John and Kagan, Leonid and Kraft, Cheryl and Levitsky, Alexander and Lewis, Mark and Liu, Xiangjun and Lopez, John and Ma, Daniel and Majoros, William and McDaniel, Joe and Murphy, Sean and Newman, Matthew and Nguyen, Trung and Nguyen, Ngoc and Nodell, Marc and Pan, Sue and Peck, Jim and Peterson, Marshall and Rowe, William and Sanders, Robert and Scott, John and Simpson, Michael and Smith, Thomas and Sprague, Arlan and Stockwell, Timothy and Turner, Russell and Venter, Eli and Wang, Mei and Wen, Meiyuan and Wu, David and Wu, Mitchell and Xia, Ashley and Zandieh, Ali and Zhu, Xiaohong}, 
+title = {The Sequence of the Human Genome},
+volume = {291}, 
+number = {5507}, 
+pages = {1304-1351}, 
+year = {2001}, 
+doi = {10.1126/science.1058040}, 
+abstract ={A 2.91-billion base pair (bp) consensus sequence of the euchromatic portion of the human genome was generated by the whole-genome shotgun sequencing method. The 14.8-billion bp DNA sequence was generated over 9 months from 27,271,853 high-quality sequence reads (5.11-fold coverage of the genome) from both ends of plasmid clones made from the DNA of five individuals. Two assembly strategies—a whole-genome assembly and a regional chromosome assembly—were used, each combining sequence data from Celera and the publicly funded genome effort. The public data were shredded into 550-bp segments to create a 2.9-fold coverage of those genome regions that had been sequenced, without including biases inherent in the cloning and assembly procedure used by the publicly funded group. This brought the effective coverage in the assemblies to eightfold, reducing the number and size of gaps in the final assembly over what would be obtained with 5.11-fold coverage. The two assembly strategies yielded very similar results that largely agree with independent mapping data. The assemblies effectively cover the euchromatic regions of the human chromosomes. More than 90% of the genome is in scaffold assemblies of 100,000 bp or more, and 25% of the genome is in scaffolds of 10 million bp or larger. Analysis of the genome sequence revealed 26,588 protein-encoding transcripts for which there was strong corroborating evidence and an additional ∼12,000 computationally derived genes with mouse matches or other weak supporting evidence. Although gene-dense clusters are obvious, almost half the genes are dispersed in low G+C sequence separated by large tracts of apparently noncoding sequence. Only 1.1% of the genome is spanned by exons, whereas 24% is in introns, with 75% of the genome being intergenic DNA. Duplications of segmental blocks, ranging in size up to chromosomal lengths, are abundant throughout the genome and reveal a complex evolutionary history. Comparative genomic analysis indicates vertebrate expansions of genes associated with neuronal function, with tissue-specific developmental regulation, and with the hemostasis and immune systems. DNA sequence comparisons between the consensus sequence and publicly funded genome data provided locations of 2.1 million single-nucleotide polymorphisms (SNPs). A random pair of human haploid genomes differed at a rate of 1 bp per 1250 on average, but there was marked heterogeneity in the level of polymorphism across the genome. Less than 1% of all SNPs resulted in variation in proteins, but the task of determining which SNPs have functional consequences remains an open challenge.}, 
+URL = {http://www.sciencemag.org/content/291/5507/1304.abstract}, 
+eprint = {http://www.sciencemag.org/content/291/5507/1304.full.pdf}, 
+journal = {Science} 
+}
