--- a/Documents/Thesis/HolderThesis2015.tex
+++ b/Documents/Thesis/HolderThesis2015.tex
@@ -831,6 +831,8 @@ Some prior work has focused on measuring physiological characteristics, especial
 
 Talk about using this for other tasks, both understood (sports) and specified, via natural (work tasks, mechanical turk) or formal (music, enterprise project planning) language.
 
+Draw inspiration from bioinformatics \cite{genomePub} \cite{genomePri}.
+
 \chapter{Conclusions} 
 \label{sec:conclu}
 \markright{Ethan G. Holder  \hfill Chapter 9. Conclusions \hfill}
