Updating thesis for xwsxethan/MusicScoring#100

--- a/Documents/Thesis/HolderThesis2015.bib
+++ b/Documents/Thesis/HolderThesis2015.bib
@@ -428,3 +428,10 @@ URL = {http://www.sciencemag.org/content/291/5507/1304.abstract},
 eprint = {http://www.sciencemag.org/content/291/5507/1304.full.pdf}, 
 journal = {Science} 
 }
+
+@book{java,
+  title={The Java language specification},
+  author={Gosling, James},
+  year={2000},
+  publisher={Addison-Wesley Professional}
+}
